--- a/NCommon.Testing/NCommon.Testing.csproj
+++ b/NCommon.Testing/NCommon.Testing.csproj
@@ -36,7 +36,7 @@
       <HintPath>..\Libs\Microsoft.Practices.ServiceLocation.dll</HintPath>
     </Reference>
     <Reference Include="Rhino.Mocks">
-      <HintPath>..\Libs\Rhino.Mocks.dll</HintPath>
+      <HintPath>..\Libs\Rhino.Mocks\Rhino.Mocks.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
