--- a/NCommon.EntityFramework/tests/NCommon.EntityFramework4.Tests/NCommon.EntityFramework4.Tests.csproj
+++ b/NCommon.EntityFramework/tests/NCommon.EntityFramework4.Tests/NCommon.EntityFramework4.Tests.csproj
@@ -32,7 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework">
-      <HintPath>..\..\..\Libs\EntityFramework.dll</HintPath>
+      <HintPath>..\..\..\Libs\EFCodeFirst\EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Practices.ServiceLocation">
       <HintPath>..\..\..\Libs\Microsoft.Practices.ServiceLocation.dll</HintPath>
@@ -41,7 +41,7 @@
       <HintPath>..\..\..\Libs\NUnit\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="Rhino.Mocks">
-      <HintPath>..\..\..\Libs\Rhino.Mocks.dll</HintPath>
+      <HintPath>..\..\..\Libs\Rhino.Mocks\Rhino.Mocks.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
