Upgraded sample to MVC3

--- a/Sample/MvcStore/Web.config
+++ b/Sample/MvcStore/Web.config
@@ -9,7 +9,7 @@
   </configSections>
   <appSettings>
     <!-- Schema Export Mode Values: CREATE / UPDATE (case sensitive)-->
-    <add key="SchemaExportMode" value="UPDATE" />
+    <add key="SchemaExportMode" value="CREATE" />
     <add key="ClientValidationEnabled" value="false" />
     <add key="UnobtrusiveJavaScriptEnabled" value="false" />
   </appSettings>
