--- a/Sample/MvcStore/MvcStore.csproj
+++ b/Sample/MvcStore/MvcStore.csproj
@@ -136,6 +136,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\store.mdf" />
+    <Content Include="App_Data\store_log.LDF">
+      <DependentUpon>store.mdf</DependentUpon>
+    </Content>
     <Content Include="App_Readme\glimpse.readme.txt" />
     <Content Include="Global.asax" />
     <Content Include="Scripts\includes.js" />
@@ -162,7 +165,9 @@
     <Content Include="Scripts\MicrosoftMvcAjax.debug.js" />
     <Content Include="Scripts\MicrosoftMvcValidation.js" />
     <Content Include="Scripts\MicrosoftMvcValidation.debug.js" />
-    <Content Include="Views\Web.config" />
+    <Content Include="Views\Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Scripts\jquery-1.4.4.js" />
     <Content Include="Scripts\jquery-1.4.4-vsdoc.js" />
     <Content Include="Scripts\jquery-1.4.4.min.js" />
