--- a/NCommon.ContainerAdapters/NCommon.ContainerAdapter.NInject/NCommon.ContainerAdapter.NInject.csproj
+++ b/NCommon.ContainerAdapters/NCommon.ContainerAdapter.NInject/NCommon.ContainerAdapter.NInject.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{7D439D38-9B0B-4E6B-A6A4-F37DF7208569}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NCommon.ContainerAdapter.NInject</RootNamespace>
-    <AssemblyName>NCommon.ContainerAdapter.NInject</AssemblyName>
+    <RootNamespace>NCommon.ContainerAdapter.Ninject</RootNamespace>
+    <AssemblyName>NCommon.ContainerAdapter.Ninject</AssemblyName>
     <TargetFrameworkVersion Condition="$(TargetFrameworkVersion)==''">v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -31,10 +31,23 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <ItemGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>..\..\ncommon.snk</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
+  <ItemGroup Condition="$(TargetFrameworkVersion)=='v4.0'">
     <Reference Include="Ninject, Version=2.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Ninject.2.2.1.4\lib\net40-Full\Ninject.dll</HintPath>
     </Reference>
+  </ItemGroup>
+  <ItemGroup Condition="$(TargetFrameworkVersion)=='v3.5'">
+    <Reference Include="Ninject, Version=2.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Ninject.2.2.1.4\lib\net35-Full\Ninject.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+  <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -56,6 +69,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\..\ncommon.snk">
+      <Link>ncommon.snk</Link>
+    </None>
+    <None Include="NCommon.ContainerAdapter.Ninject.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
