--- a/NCommon.ContainerAdapters/NCommon.ContainerAdapter.Unity/NCommon.ContainerAdapter.Unity.csproj
+++ b/NCommon.ContainerAdapters/NCommon.ContainerAdapter.Unity/NCommon.ContainerAdapter.Unity.csproj
@@ -64,6 +64,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\..\ncommon.snk">
+      <Link>ncommon.snk</Link>
+    </None>
+    <None Include="NCommon.ContainerAdapter.Unity.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
