--- a/NCommon.Testing/NCommon.Testing.csproj
+++ b/NCommon.Testing/NCommon.Testing.csproj
@@ -60,6 +60,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\ncommon.snk">
+      <Link>ncommon.snk</Link>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
