--- a/NCommon.ContainerAdapters/NCommon.ContainerAdapter.StructureMap/NCommon.ContainerAdapter.StructureMap.csproj
+++ b/NCommon.ContainerAdapters/NCommon.ContainerAdapter.StructureMap/NCommon.ContainerAdapter.StructureMap.csproj
@@ -57,6 +57,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\..\ncommon.snk">
+      <Link>ncommon.snk</Link>
+    </None>
+    <None Include="NCommon.ContainerAdapter.StructureMap.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
