--- a/Sample/MvcStore/packages.config
+++ b/Sample/MvcStore/packages.config
@@ -1,15 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="2.5.2" />
   <package id="log4net" version="1.2.10" />
-  <package id="CommonServiceLocator" version="1.0" />
-  <package id="CommonServiceLocator.WindsorAdapter" version="1.0" />
-  <package id="Iesi.Collections" version="3.1.0.4000" />
-  <package id="NHibernate" version="3.1.0.4000" />
-  <package id="NHibernate.Castle" version="3.1.0.4000" />
-  <package id="FluentNHibernate" version="1.2.0.712" />
-  <package id="Castle.Windsor" version="2.5.3" />
-  <package id="Common.Logging" version="2.0.0" />
   <package id="Common.Logging.Log4Net" version="2.0.0" />
   <package id="Glimpse" version="0.82" />
+  <package id="EntityFramework" version="4.1.10331.0" />
+  <package id="Common.Logging" version="2.0.0" />
+  <package id="CommonServiceLocator" version="1.0" />
+  <package id="NCommon" version="1.2" />
+  <package id="Iesi.Collections" version="3.1.0.4000" />
+  <package id="NHibernate" version="3.1.0.4000" />
+  <package id="NCommon.NHibernate" version="1.2" />
+  <package id="Castle.Core" version="2.5.2" />
+  <package id="Castle.Windsor" version="2.5.3" />
+  <package id="NCommon.ContainerAdapter.CastleWindsor" version="1.2" />
+  <package id="NCommon.EntityFramework" version="1.2" />
+  <package id="NHibernate.Castle" version="3.1.0.4000" />
+  <package id="FluentNHibernate" version="1.2.0.712" />
+  <package id="NCommon.Mvc" version="1.2" />
+  <package id="CommonServiceLocator.WindsorAdapter" version="1.0" />
 </packages>
