Refactored but not yet tested.

--- a/NCommon.Db4o/tests/packages.config
+++ b/NCommon.Db4o/tests/packages.config
@@ -4,4 +4,5 @@
   <package id="db4o-cs-devel" version="8.1.184.15492" />
   <package id="db4o-devel" version="8.1.184.15492" />
   <package id="NUnit" version="3.12.0" targetFramework="net48" />
+  <package id="NUnitTestAdapter.WithFramework" version="2.0.0" targetFramework="net48" />
 </packages>
