--- a/NCommon/src/NCommon.csproj
+++ b/NCommon/src/NCommon.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Collections\ListDictionary.cs" />
     <Compile Include="Collections\PaginatedList.cs" />
     <Compile Include="Configuration\AssemblyPathPropertyAttribute.cs" />
+    <Compile Include="Constants.cs" />
     <Compile Include="DependencyInjection\IContainerAdapter.cs" />
     <Compile Include="Configuration\IDataConfiguration.cs" />
     <Compile Include="Configuration\DefaultStateConfiguration.cs" />
@@ -100,10 +101,14 @@
     <Compile Include="Configuration\IStateConfiguration.cs" />
     <Compile Include="Configuration\IUnitOfWorkConfiguration.cs" />
     <Compile Include="ConfigureNCommon.cs" />
+    <Compile Include="Expressions\ExpressionExpander.cs" />
     <Compile Include="IContext.cs" />
     <Compile Include="IInstanceContext.cs" />
     <Compile Include="Context.cs" />
     <Compile Include="InstanceContextWrapper.cs" />
+    <Compile Include="Linq\ExpandableQuery.cs" />
+    <Compile Include="Linq\Linq.cs" />
+    <Compile Include="Linq\PredicateBuilder.cs" />
     <Compile Include="OperationContextWrapper.cs" />
     <Compile Include="ServiceHostWrapper.cs" />
     <Compile Include="IOperationContext.cs" />
@@ -120,11 +125,11 @@
     <Compile Include="ObjectAccess\IFetchingStrategy.cs" />
     <Compile Include="DataServices\Transactions\UnitOfWorkSettings.cs" />
     <Compile Include="DataServices\Transactions\UnitOfWorkTransaction.cs" />
-    <Compile Include="DataServices\Transactions\TransactionManager.cs" />
+    <Compile Include="DataServices\Transactions\UnitOfWorkTransactionManager.cs" />
     <Compile Include="ObjectAccess\InMemoryRepository.cs" />
     <Compile Include="DataServices\Transactions\TransactionScopeHelper.cs" />
     <Compile Include="Configuration\DefaultUnitOfWorkConfiguration.cs" />
-    <Compile Include="DataServices\Transactions\ITransactionManager.cs" />
+    <Compile Include="DataServices\Transactions\IUnitOfWorkTransactionManager.cs" />
     <Compile Include="DataServices\Transactions\IUnitOfWorkScope.cs" />
     <Compile Include="ObjectAccess\RepositoryWrapperBase.cs" />
     <Compile Include="DataServices\Transactions\UnitOfWorkManager.cs" />
@@ -143,17 +148,18 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ObjectAccess\IRepository.cs" />
     <Compile Include="ObjectAccess\RepositoryBase.cs" />
-    <Compile Include="Rules\BusinessRule.cs" />
-    <Compile Include="Rules\BusinessRulesEvaluatorBase.cs" />
-    <Compile Include="Rules\EntityValidatorBase.cs" />
-    <Compile Include="Rules\IBusinessRule.cs" />
-    <Compile Include="Rules\IBusinessRulesEvaluator.cs" />
-    <Compile Include="Rules\IEntityValidator.cs" />
-    <Compile Include="Rules\IValidationRule.cs" />
-    <Compile Include="Rules\SpecificationRuleBase.cs" />
-    <Compile Include="Rules\ValidationError.cs" />
-    <Compile Include="Rules\ValidationResult.cs" />
-    <Compile Include="Rules\ValidationRule.cs" />
+    <Compile Include="Validation\BusinessRule.cs" />
+    <Compile Include="Validation\BusinessRulesEvaluatorBase.cs" />
+    <Compile Include="Validation\EntityValidatorBase.cs" />
+    <Compile Include="Validation\EqualityComparer.cs" />
+    <Compile Include="Validation\IBusinessRule.cs" />
+    <Compile Include="Validation\IBusinessRulesEvaluator.cs" />
+    <Compile Include="Validation\IEntityValidator.cs" />
+    <Compile Include="Validation\IValidationRule.cs" />
+    <Compile Include="Validation\SpecificationRuleBase.cs" />
+    <Compile Include="Validation\ValidationError.cs" />
+    <Compile Include="Validation\ValidationResult.cs" />
+    <Compile Include="Validation\ValidationRule.cs" />
     <Compile Include="ISpecification.cs" />
     <Compile Include="Specification.cs" />
     <Compile Include="DataServices\Transactions\IUnitOfWork.cs" />
@@ -179,6 +185,7 @@
     <Compile Include="StateStorage\ISessionState.cs" />
     <Compile Include="StateStorage\ISessionStateSelector.cs" />
     <Compile Include="StateStorage\IState.cs" />
+    <Compile Include="SystemTime.cs" />
     <Compile Include="Util\ConnectionString.cs" />
     <Compile Include="Util\GuidCombGenerator.cs" />
     <Compile Include="Util\Inflector.cs" />
