--- a/NCommon.ContainerAdapters/NCommon.ContainerAdapters.Tests/packages.config
+++ b/NCommon.ContainerAdapters/NCommon.ContainerAdapters.Tests/packages.config
@@ -10,6 +10,7 @@
   <package id="NHibernate" version="3.1.0.4000" />
   <package id="Ninject" version="2.2.1.4" />
   <package id="NUnit" version="3.12.0" targetFramework="net48" />
+  <package id="NUnitTestAdapter.WithFramework" version="2.0.0" targetFramework="net48" />
   <package id="structuremap" version="2.6.2" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net48" />
