--- a/NCommon.EntityFramework/tests/NCommon.EntityFramework.Tests/packages.config
+++ b/NCommon.EntityFramework/tests/NCommon.EntityFramework.Tests/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="CommonServiceLocator" version="2.0.5" targetFramework="net48" />
   <package id="NUnit" version="3.12.0" targetFramework="net48" />
+  <package id="NUnitTestAdapter.WithFramework" version="2.0.0" targetFramework="net48" />
 </packages>
