--- a/NCommon.EntityFramework/tests/NCommon.EntityFramework4.Tests/packages.config
+++ b/NCommon.EntityFramework/tests/NCommon.EntityFramework4.Tests/packages.config
@@ -3,4 +3,5 @@
   <package id="CommonServiceLocator" version="2.0.5" targetFramework="net48" />
   <package id="EntityFramework" version="4.1.10331.0" />
   <package id="NUnit" version="3.12.0" targetFramework="net48" />
+  <package id="NUnitTestAdapter.WithFramework" version="2.0.0" targetFramework="net48" />
 </packages>
